Refactor website content for clarity and impact; update headings, descriptions, and service details across index, projects, and services pages to enhance user engagement and SEO optimization.

--- a/about.html
+++ b/about.html
@@ -35,30 +35,29 @@
 
         <section class="hero page-hero anim-fade-in-up">
             <div class="container hero-content">
-                <h1>Built From Experience.</h1>
-                <p class="subtitle" data-delay="100">Elite Install was born from a simple but powerful idea: furniture dealers deserve an installation partner as committed to their success as they are.</p>
+                <h1>A Better Installation Partner.</h1>
+                <p class="subtitle" data-delay="100">Elite Install was founded on a simple but powerful idea: furniture dealers deserve an installation partner as committed to their success as they are.</p>
             </div>
         </section>
 
         <section class="section">
             <div class="container story-container">
                 <div class="section-header anim-fade-in-up">
-                    <h2>From Project Manager to Your Most Trusted Partner</h2>
+                    <h2>From Project Manager to Partner</h2>
                 </div>
                 <div class="story-content anim-fade-in-up">
-                    <p>Before founding Elite Install, our leader spent years as a senior project manager for educational and commercial furniture dealerships.</p>
-                    <p>He lived the daily struggle you know all too well: the missed deadlines from unreliable subs, the budget overruns from inefficiency, and the constant brand damage caused by unprofessional crews on-site. The stress of managing installations often overshadowed the satisfaction of a completed project.</p>
-                    <p class="highlight-text">He knew there had to be a better way. A partnership built on transparency, accountability, and a deep respect for the dealer's reputation.</p>
-                    <p>So, he built it.</p>
+                    <p>Before founding Elite Install, our leader was a senior project manager for educational and commercial furniture dealerships. He lived the daily struggle of unreliable subs, missed deadlines, and brand damage from unprofessional crews.</p>
+                    <p class="highlight-text">He knew there had to be a better way—a partnership built on transparency, accountability, and a deep respect for the dealer's reputation.</p>
+                    <p>So, he built it. Elite Install is the partner he always wished he had.</p>
                 </div>
             </div>
         </section>
 
         <section class="cta-section anim-fade-in-up">
             <div class="container">
-                <h2>Ready for a True Partnership?</h2>
+                <h2>Experience the Difference</h2>
                 <p>Let's discuss how our commitment to quality, communication, and professionalism can ensure the success of your next project.</p>
-                <a href="contact.html" class="btn btn-primary">Partner With Us</a>
+                <a href="contact.html" class="btn btn-primary">Become a Partner</a>
             </div>
         </section>
 
