--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
     <main id="main-content">
         <div class="page-header anim-fade-in-up">
             <div class="container">
-                <h1>Let's Build Together</h1>
-                <p>Ready to partner with us? Fill out the form below or contact us directly to discuss how we can support your next project.</p>
+                <h1>Get in Touch</h1>
+                <p>Have a project in mind? Fill out the form below or contact us directly. We're ready to help.</p>
             </div>
         </div>
 
@@ -49,11 +49,11 @@
                     <div class="contact-form">
                         <form id="contactForm" action="https://formspree.io/f/xdkdpgwk" method="POST">
                             <div class="form-group">
-                                <label for="name">Your Name *</label>
+                                <label for="name">Full Name *</label>
                                 <input type="text" id="name" name="name" required>
                             </div>
                             <div class="form-group">
-                                <label for="company">Dealership Name *</label>
+                                <label for="company">Company / Dealership *</label>
                                 <input type="text" id="company" name="company" required>
                             </div>
                             <div class="form-group">
@@ -61,10 +61,10 @@
                                 <input type="email" id="email" name="email" required>
                             </div>
                             <div class="form-group">
-                                <label for="project">Tell us about your project *</label>
-                                <textarea id="project" name="project" rows="5" placeholder="Project type, timeline, location, etc." required></textarea>
+                                <label for="project">Project Details *</label>
+                                <textarea id="project" name="project" rows="5" placeholder="Please include project type, location, timeline, and any relevant details." required></textarea>
                             </div>
-                            <button type="submit" class="btn btn-primary" style="width: 100%;">Submit Request</button>
+                            <button type="submit" class="btn btn-primary" style="width: 100%;">Send Inquiry</button>
                         </form>
                         <div id="thankyou" style="display:none; margin-top:1em;">
                           <p>Thank you! Your message has been sent.</p>
@@ -83,20 +83,20 @@
 
                     <div class="contact-info">
                         <div class="contact-info-item">
-                            <h4>Direct Email</h4>
-                            <p>tylerherrick13@gmail.com</p>
+                            <h4>Email Us</h4>
+                            <p><a href="mailto:tylerherrick13@gmail.com">tylerherrick13@gmail.com</a></p>
                         </div>
                         <div class="contact-info-item">
-                            <h4>Phone</h4>
-                            <p>(469) 380-1551</p>
+                            <h4>Call Us</h4>
+                            <p><a href="tel:+14693801551">(469) 380-1551</a></p>
                         </div>
                         <div class="contact-info-item">
-                            <h4>Service Areas</h4>
+                            <h4>Service Area</h4>
                             <p>Dallas, Houston, Austin, San Antonio, & West Texas.</p>
                         </div>
                         <div class="contact-info-item">
-                            <h4>Our Commitment</h4>
-                            <p>All quote requests and inquiries are answered within 24 business hours. We respect your time.</p>
+                            <h4>Our Guarantee</h4>
+                            <p>We guarantee a response to all inquiries within 24 business hours. Your time is valuable, and we respect it.</p>
                         </div>
                     </div>
 
