--- a/projects.html
+++ b/projects.html
@@ -37,8 +37,8 @@
     <main id="main-content">
         <div class="page-header anim-fade-in-up">
             <div class="container">
-                <h1>Proven Results</h1>
-                <p>We deliver exceptional results for furniture dealers across the region. See the precision and professionalism that sets our work apart.</p>
+                <h1>Proven Results.</h1>
+                <p>We deliver exceptional results for furniture dealers across Texas. See the precision and professionalism that sets our work apart.</p>
             </div>
         </div>
 
@@ -52,7 +52,7 @@
                             <h3>Complete FF&E Installation</h3>
                             <p><strong>Scope:</strong> 800-student middle school, 45 classrooms, library, cafeteria, and admin areas.</p>
                             <div class="project-highlight">
-                                "Completed the 3-week schedule 2 days early with zero punch-list items. The school district was extremely impressed."
+                                "Finished 2 days ahead of schedule with zero punch-list items. The school district was extremely impressed."
                             </div>
                         </div>
                     </div>
@@ -60,10 +60,10 @@
                     <div class="project-card anim-fade-in-up" data-delay="100">
                         <div class="project-image">University Library</div>
                         <div class="project-content">
-                            <h3>Library & Study Center Reno</h3>
+                            <h3>Library Renovation</h3>
                             <p><strong>Scope:</strong> Complete library renovation including shelving, study areas, and collaborative spaces.</p>
                             <div class="project-highlight">
-                                "Worked overnight shifts to minimize disruption during finals week, finishing without affecting student access."
+                                "Worked overnight to minimize disruption during finals week, finishing without impacting student access."
                             </div>
                         </div>
                     </div>
@@ -74,18 +74,18 @@
                             <h3>Science & Technology Labs</h3>
                             <p><strong>Scope:</strong> 12 science labs, STEM maker space, and prep areas with specialized equipment.</p>
                             <div class="project-highlight">
-                                "Precision installation of lab stations and equipment requiring exact specifications. All safety protocols were followed with zero incidents."
+                                "Precision installation of lab stations with exact specifications. All safety protocols were followed with zero incidents."
                             </div>
                         </div>
                     </div>
                     
                     <div class="project-card anim-fade-in-up" data-delay="300">
-                        <div class="project-image">Corporate Office Fit-Out</div>
+                        <div class="project-image">Corporate Office</div>
                         <div class="project-content">
-                            <h3>Downtown Corporate HQ</h3>
+                            <h3>Corporate HQ Fit-Out</h3>
                             <p><strong>Scope:</strong> 250 workstations, 20 executive offices, conference rooms, and a central break area.</p>
                             <div class="project-highlight">
-                                "Managed a phased installation in an active office environment, coordinating seamlessly with other trades on a tight schedule."
+                                "Managed a phased installation in an active office, coordinating seamlessly with other trades on a tight schedule."
                             </div>
                         </div>
                     </div>
@@ -96,9 +96,9 @@
 
         <section class="cta-section anim-fade-in-up">
             <div class="container">
-                <h2>Ready to build with a reliable partner?</h2>
-                <p>Let's discuss how we can support your next project with the reliability your dealership deserves.</p>
-                <a href="contact.html" class="btn btn-primary">Get Your Free Quote</a>
+                <h2>Ready to partner with the best?</h2>
+                <p>Let's discuss how we can bring the same level of quality and professionalism to your next project.</p>
+                <a href="contact.html" class="btn btn-primary">Get a Free Quote</a>
             </div>
         </section>
 
