--- a/services.html
+++ b/services.html
@@ -37,8 +37,8 @@
     <main id="main-content">
         <div class="page-header anim-fade-in-up">
             <div class="container">
-                <h1>Our Installation Services</h1>
-                <p>We provide comprehensive, turnkey solutions for all educational and commercial environments, handling every detail so you can focus on your clients.</p>
+                <h1>Our Services</h1>
+                <p>Comprehensive, turnkey solutions for educational and commercial environments.</p>
             </div>
         </div>
 
@@ -46,28 +46,28 @@
             <div class="container">
                 <div class="services-grid">
                     <div class="service-card anim-fade-in-up">
-                        <h3>K-12 Classroom Furniture</h3>
-                        <p>Desks, chairs, tables, teacher stations, and mobile storage. We handle everything from single classroom refreshes to entire new-build installations with precision and care.</p>
+                        <h3>K-12 Classrooms</h3>
+                        <p>Desks, chairs, tables, and storage. We handle everything from single classroom refreshes to entire new-builds.</p>
                     </div>
                     <div class="service-card anim-fade-in-up" data-delay="100">
-                        <h3>Library & Media Centers</h3>
-                        <p>Expert assembly and placement of shelving systems, circulation desks, study carrels, soft seating, and collaborative furniture to create inspiring learning hubs.</p>
+                        <h3>Libraries & Media Centers</h3>
+                        <p>Expert assembly of shelving, circulation desks, study carrels, and soft seating to create inspiring learning hubs.</p>
                     </div>
                     <div class="service-card anim-fade-in-up" data-delay="200">
-                        <h3>Science Labs & STEM</h3>
-                        <p>Precision installation for lab stations, chemical-resistant countertops, fume hoods, and specialized STEM equipment that demands accuracy and safety protocols.</p>
+                        <h3>Science & STEM Labs</h3>
+                        <p>Precision installation for lab stations, chemical-resistant countertops, fume hoods, and specialized equipment.</p>
                     </div>
                     <div class="service-card anim-fade-in-up" data-delay="300">
-                        <h3>Cafeterias & Common Areas</h3>
-                        <p>High-volume installation of cafeteria tables, benches, waste receptacles, stage equipment, and common area lounge furniture, completed efficiently and professionally.</p>
+                        <h3>Common Areas & Cafeterias</h3>
+                        <p>High-volume installation of tables, seating, waste receptacles, and stage equipment, completed efficiently.</p>
                     </div>
                     <div class="service-card anim-fade-in-up" data-delay="400">
-                        <h3>Administrative & Office Areas</h3>
-                        <p>Assembly of office systems, reception desks, conference tables, and storage solutions that create professional environments reflecting your dealership's quality.</p>
+                        <h3>Administrative Offices</h3>
+                        <p>Assembly of office systems, reception desks, conference tables, and storage to create professional environments.</p>
                     </div>
                     <div class="service-card anim-fade-in-up" data-delay="500">
                         <h3>Full Project Support</h3>
-                        <p>Beyond installation, we offer project phasing coordination, receiving and warehousing, debris removal, site cleanup, and final warranty walkthrough support.</p>
+                        <p>Beyond installation, we offer warehousing, debris removal, site cleanup, and final warranty walkthroughs.</p>
                     </div>
                 </div>
             </div>
@@ -75,9 +75,9 @@
 
         <section class="cta-section anim-fade-in-up">
             <div class="container">
-                <h2>Ready to build with a reliable partner?</h2>
+                <h2>Ready for a reliable partner?</h2>
                 <p>Let's discuss how we can support your next project with the reliability your dealership deserves.</p>
-                <a href="contact.html" class="btn btn-primary">Get Your Free Quote</a>
+                <a href="contact.html" class="btn btn-primary">Get a Free Quote</a>
             </div>
         </section>
 
