--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
     <div id="hero-canvas-container" style="z-index:1;position:absolute;top:0;left:0;right:0;bottom:0;pointer-events:none;"></div>
     <div class="container hero-content">
         <div class="hero-text-container">
-            <h1 class="hero-headline-deconstruct"><span>Your</span> <span class="accent-text">Reputation,</span> <span>Installed.</span></h1>
-            <p class="subtitle anim-fade-in-up" data-delay="100">Your trusted partner for school furniture installation in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success for your clients.</p>
+            <h1 class="hero-headline-deconstruct"><span>Flawless</span> <span class="accent-text">Execution,</span> <span>Delivered.</span></h1>
+            <p class="subtitle anim-fade-in-up" data-delay="100">The trusted B2B partner for school furniture dealers in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success.</p>
             <div class="cta-buttons anim-fade-in-up" data-delay="200">
-                <a href="contact.html" class="btn btn-primary">Request a Free Quote</a>
-                <a href="services.html" class="btn btn-outline">Explore Services</a>
+                <a href="contact.html" class="btn btn-primary">Get a Quote</a>
+                <a href="services.html" class="btn btn-outline">View Our Services</a>
             </div>
         </div>
     </div>
@@ -182,37 +182,37 @@
     <section class="section services-section">
       <div class="container">
         <div class="section-header anim-fade-in-up">
-            <h2 class="section-title">Our Core Services</h2>
-            <p class="section-subtitle">Precision, professionalism, and peace of mind, delivered.</p>
+            <h2 class="section-title">Our Expertise</h2>
+            <p class="section-subtitle">Precision, professionalism, and peace of mind.</p>
         </div>
         <div class="services-grid">
           <div class="service-card anim-fade-in-up" data-delay="100">
             <div class="service-card-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
             </div>
-            <h3 class="service-card-title">School Furniture Installation</h3>
-            <p>Expert assembly and setup of desks, chairs, and lab furniture for K-12 and higher education.</p>
+            <h3 class="service-card-title">Educational Furniture</h3>
+            <p>Expert installation of K-12 and higher education furniture, ensuring a seamless setup from start to finish.</p>
           </div>
           <div class="service-card anim-fade-in-up" data-delay="200">
             <div class="service-card-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
             </div>
-            <h3 class="service-card-title">FF&E Solutions</h3>
-            <p>Comprehensive installation of Furniture, Fixtures & Equipment for any educational or commercial space.</p>
+            <h3 class="service-card-title">Commercial & FF&E</h3>
+            <p>Comprehensive solutions for Furniture, Fixtures & Equipment in any commercial or educational space.</p>
           </div>
           <div class="service-card anim-fade-in-up" data-delay="300">
             <div class="service-card-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
             </div>
             <h3 class="service-card-title">Project Management</h3>
-            <p>From delivery coordination to punch-list completion, we manage every step for a seamless project.</p>
+            <p>We handle all logistics, from delivery coordination to final walkthrough, for a seamless project.</p>
           </div>
           <div class="service-card anim-fade-in-up" data-delay="400">
             <div class="service-card-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
             </div>
             <h3 class="service-card-title">Statewide Coverage</h3>
-            <p>Serving Dallas, Houston, Austin, San Antonio, and West Texas with our dedicated, professional team.</p>
+            <p>Our professional teams serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
           </div>
         </div>
       </div>
@@ -221,14 +221,14 @@
     <!-- Trust Signals Section -->
     <section class="section" style="background:var(--color-gray-dark);padding:4rem 0 3rem 0;">
       <div class="container" style="max-width:900px;text-align:center;">
-        <h2 style="margin-bottom:1.5rem;color:#fff;">Why Choose Elite Install?</h2>
+        <h2 style="margin-bottom:1.5rem;color:#fff;">The Elite Advantage</h2>
         <ul style="display:grid;grid-template-columns:1fr 1fr;gap:2rem;list-style:none;padding:0;margin:0 auto 2.5rem auto;max-width:700px;">
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Fully insured and certified installation team</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ 24-hour response time guarantee</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ No temporary labor—only full-time professionals</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Detailed project documentation and communication</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Trusted by Texas school furniture dealers</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Flexible scheduling for summer and off-hours</li>
+          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Fully Insured & Certified Professionals</li>
+          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Guaranteed 24-Hour Response Time</li>
+          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ No Temp Labor—Only Full-Time Experts</li>
+          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Proactive Communication & Documentation</li>
+          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Trusted by Texas' Leading Furniture Dealers</li>
+          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Flexible Scheduling (Summer & Off-Hours)</li>
         </ul>
         <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Get a Free Consultation</a>
       </div>
@@ -262,8 +262,8 @@
     <!-- Call to Action Section (bottom) -->
     <section class="section cta-section anim-fade-in-up" style="background:var(--color-black);padding:4rem 0 3rem 0;">
       <div class="container" style="max-width:700px;text-align:center;">
-        <h2 style="margin-bottom:1.2rem;color:#fff;">Ready to Elevate Your Next Project?</h2>
-        <p style="margin-bottom:2.2rem;color:#fff;">Let’s discuss how Elite Install can deliver a flawless installation for your school or business. Our team is ready to help you succeed.</p>
+        <h2 style="margin-bottom:1.2rem;color:#fff;">Elevate Your Next Project</h2>
+        <p style="margin-bottom:2.2rem;color:#fff;">Discover how Elite Install can deliver a flawless installation for your school or business. Our team is ready to help you succeed.</p>
         <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Request a Free Quote</a>
       </div>
     </section>
@@ -271,29 +271,29 @@
         <section class="section section-accented principles-section">
             <div class="container" style="max-width:1200px;">
                 <div class="section-header anim-fade-in-up" style="margin-bottom:3.5rem;">
-                    <h2 style="margin-bottom:1.2rem;">Our Foundational Commitments</h2>
-                    <p style="margin-bottom:0;">These are the principles that define our work. They are not aspirational goals, but the standards we bring to every project, ensuring a professional experience from our first conversation to the final walkthrough.</p>
+                    <h2 style="margin-bottom:1.2rem;">Our Commitment to You</h2>
+                    <p style="margin-bottom:0;">These principles define our work. They are the standards we bring to every project, ensuring a professional experience from our first conversation to the final walkthrough.</p>
                 </div>
                 <div class="features-grid" style="gap:2.5rem;">
                     <article class="feature-card anim-fade-in-up" style="padding:2.5rem 2rem;">
                         <div class="feature-icon" style="margin-bottom:1.2rem;"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div>
                         <h3 style="margin-bottom:0.7rem;">Unwavering Reliability</h3>
-                        <p style="margin-bottom:0;">Your schedule is our guide. We approach every project with thorough planning and logistical foresight to ensure your timeline is respected and your peace of mind is protected.</p>
+                        <p style="margin-bottom:0;">Your schedule is our guide. We use thorough planning and logistical foresight to ensure your timeline is met and your peace of mind is protected.</p>
                     </article>
                     <article class="feature-card anim-fade-in-up" data-delay="100" style="padding:2.5rem 2rem;">
                         <div class="feature-icon" style="margin-bottom:1.2rem;"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div>
                         <h3 style="margin-bottom:0.7rem;">Radical Professionalism</h3>
-                        <p style="margin-bottom:0;">Our uniformed crew understands they are ambassadors for your brand. We operate with courtesy and respect, maintaining a clean and orderly site to reflect the quality you promise.</p>
+                        <p style="margin-bottom:0;">Our uniformed crew are ambassadors for your brand. We operate with courtesy and respect, maintaining a clean, orderly site that reflects the quality you promise.</p>
                     </article>
                     <article class="feature-card anim-fade-in-up" data-delay="200" style="padding:2.5rem 2rem;">
                         <div class="feature-icon" style="margin-bottom:1.2rem;"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div>
                         <h3 style="margin-bottom:0.7rem;">Dedicated Expertise</h3>
-                        <p style="margin-bottom:0;">We get it right the first time. We do not use temporary labor. Our full-time, dedicated team has the training and tools necessary to execute installations efficiently, minimizing punch lists and return trips.</p>
+                        <p style="margin-bottom:0;">We get it right the first time. Our full-time, dedicated team has the training and tools to execute installations efficiently, minimizing punch lists and return trips.</p>
                     </article>
                     <article class="feature-card anim-fade-in-up" data-delay="300" style="padding:2.5rem 2rem;">
                         <div class="feature-icon" style="margin-bottom:1.2rem;"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div>
                         <h3 style="margin-bottom:0.7rem;">Proactive Communication</h3>
-                        <p style="margin-bottom:0;">You will always be informed. We establish a clear rhythm of communication and provide a single point of contact, so you never have to guess the status of your project.</p>
+                        <p style="margin-bottom:0;">You will always be informed. We provide a single point of contact and a clear communication rhythm, so you never have to guess the status of your project.</p>
                     </article>
                 </div>
             </div>
@@ -301,7 +301,7 @@
 
         <section class="cta-section anim-fade-in-up">
             <div class="container" style="max-width:700px;">
-                <h2 style="margin-bottom:1.2rem;">Let's Build a Partnership.</h2>
+                <h2 style="margin-bottom:1.2rem;">Build a Partnership That Lasts.</h2>
                 <p style="margin-bottom:2.2rem;">Ready to work with an installation partner that values your reputation as much as you do? Contact us today to discuss your next project.</p>
                 <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Begin the Conversation</a>
             </div>
