--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <div class="container">
         <div class="section-header anim-fade-in-up">
             <h2 class="section-title">Our Expertise</h2>
-            <p class="section-subtitle">Precision, professionalism, and peace of mind.</p>
+            <p class="section-subtitle">Professionalism, and peace of mind.<br>&nbsp;</p>
         </div>
         <div class="services-grid">
           <div class="service-card anim-fade-in-up" data-delay="100">
@@ -235,25 +235,25 @@
     </section>
 
     <!-- FAQ Section (visible, not just schema) -->
-    <section class="section" style="background:var(--color-gray-light);color:var(--color-black);padding:4rem 0 3rem 0;">
+    <section class="section" style="background:var(--color-gray-light);padding:4rem 0 3rem 0;">
       <div class="container" style="max-width:900px;">
-        <h2 style="text-align:center;margin-bottom:2rem;color:#111;">Frequently Asked Questions</h2>
+        <h2 style="text-align:center;margin-bottom:2rem;">Frequently Asked Questions</h2>
         <div class="faq-list" style="display:grid;gap:2rem;">
           <div>
-            <h3 style="margin-bottom:0.5rem;color:#111;">What areas do you serve?</h3>
-            <p style="color:#333;">We serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
+            <h3>What areas do you serve?</h3>
+            <p>We serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
           </div>
           <div>
-            <h3 style="margin-bottom:0.5rem;color:#111;">Are you insured and certified?</h3>
-            <p style="color:#333;">Yes, our team is fully insured and certified for professional installations.</p>
+            <h3>Are you insured and certified?</h3>
+            <p>Yes, our team is fully insured and certified for professional installations.</p>
           </div>
           <div>
-            <h3 style="margin-bottom:0.5rem;color:#111;">Do you offer project management?</h3>
-            <p style="color:#333;">Absolutely. We handle delivery, scheduling, installation, and punch lists for a seamless experience.</p>
+            <h3>Do you offer project management?</h3>
+            <p>Absolutely. We handle delivery, scheduling, installation, and punch lists for a seamless experience.</p>
           </div>
           <div>
-            <h3 style="margin-bottom:0.5rem;color:#111;">How do I get a quote?</h3>
-            <p style="color:#333;">Click any “Request a Quote” button or visit our Contact page to get started.</p>
+            <h3>How do I get a quote?</h3>
+            <p>Click any “Request a Quote” button or visit our Contact page to get started.</p>
           </div>
         </div>
       </div>
@@ -270,7 +270,7 @@
 
         <section class="section section-accented principles-section">
             <div class="container" style="max-width:1200px;">
-                <div class="section-header anim-fade-in-up" style="margin-bottom:3.5rem;">
+                <div class="section-header anim-fade-in-up" style="margin-bottom:3.5rem; text-align: center;">
                     <h2 style="margin-bottom:1.2rem;">Our Commitment to You</h2>
                     <p style="margin-bottom:0;">These principles define our work. They are the standards we bring to every project, ensuring a professional experience from our first conversation to the final walkthrough.</p>
                 </div>
@@ -348,5 +348,3 @@
     <script src="script.js" defer></script>
 </body>
 </html>
-
-
