--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <main id="main-content">
 
     <!-- Sticky CTA Button for Mobile -->
-    <a href="contact.html" class="sticky-cta" style="position:fixed;bottom:2.5rem;right:2.5rem;z-index:1000;display:none;padding:1.1em 2.2em;background:#0078d4;color:#fff;border-radius:32px;font-weight:700;box-shadow:0 2px 16px rgba(0,0,0,0.18);text-decoration:none;letter-spacing:0.02em;transition:background 0.2s,box-shadow 0.2s;">Request a Quote</a>
+    <a href="contact.html" class="sticky-cta">Request a Quote</a>
     <script>
       function toggleStickyCTA() {
         var cta = document.querySelector('.sticky-cta');
@@ -162,21 +162,22 @@
       window.addEventListener('DOMContentLoaded', toggleStickyCTA);
     </script>
 
-        <section class="hero">
-    <div class="hero-bg-image" aria-hidden="true"></div>
-    <div class="hero-overlay" aria-hidden="true"></div>
-    <div id="hero-canvas-container" style="z-index:1;position:absolute;top:0;left:0;right:0;bottom:0;pointer-events:none;"></div>
-    <div class="container hero-content">
-        <div class="hero-text-container">
-            <h1 class="hero-headline-deconstruct"><span>Flawless</span> <span class="accent-text">Execution,</span> <span>Delivered.</span></h1>
-            <p class="subtitle anim-fade-in-up" data-delay="100">The trusted B2B partner for school furniture dealers in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success.</p>
-            <div class="cta-buttons anim-fade-in-up" data-delay="200">
-                <a href="contact.html" class="btn btn-primary">Get a Quote</a>
-                <a href="services.html" class="btn btn-outline">View Our Services</a>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-bg-image" aria-hidden="true"></div>
+        <div class="hero-overlay" aria-hidden="true"></div>
+        <div id="hero-canvas-container"></div>
+        <div class="container hero-content">
+            <div class="hero-text-container">
+                <h1 class="hero-headline-deconstruct"><span>Flawless</span> <span class="accent-text">Execution,</span> <span>Delivered.</span></h1>
+                <p class="subtitle anim-fade-in-up" data-delay="100">The trusted B2B partner for school furniture dealers in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success.</p>
+                <div class="cta-buttons anim-fade-in-up" data-delay="200">
+                    <a href="contact.html" class="btn btn-primary">Get a Quote</a>
+                    <a href="services.html" class="btn btn-outline">View Our Services</a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <!-- Service Highlights Section -->
     <section class="section services-section">
@@ -219,26 +220,26 @@
     </section>
 
     <!-- Trust Signals Section -->
-    <section class="section" style="background:var(--color-gray-dark);padding:4rem 0 3rem 0;">
-      <div class="container" style="max-width:900px;text-align:center;">
-        <h2 style="margin-bottom:1.5rem;color:#fff;">The Elite Advantage</h2>
-        <ul style="display:grid;grid-template-columns:1fr 1fr;gap:2rem;list-style:none;padding:0;margin:0 auto 2.5rem auto;max-width:700px;">
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Fully Insured & Certified Professionals</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Guaranteed 24-Hour Response Time</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ No Temp Labor—Only Full-Time Experts</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Proactive Communication & Documentation</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Trusted by Texas' Leading Furniture Dealers</li>
-          <li style="text-align:left;color:#fff;font-size:1.13rem;">✔ Flexible Scheduling (Summer & Off-Hours)</li>
+    <section class="section trust-signals-section">
+      <div class="container trust-signals-container">
+        <h2 class="trust-signals-title">The Elite Advantage</h2>
+        <ul class="trust-signals-list">
+          <li class="trust-signals-list-item">✔ Fully Insured & Certified Professionals</li>
+          <li class="trust-signals-list-item">✔ Guaranteed 24-Hour Response Time</li>
+          <li class="trust-signals-list-item">✔ No Temp Labor—Only Full-Time Experts</li>
+          <li class="trust-signals-list-item">✔ Proactive Communication & Documentation</li>
+          <li class="trust-signals-list-item">✔ Trusted by Texas' Leading Furniture Dealers</li>
+          <li class="trust-signals-list-item">✔ Flexible Scheduling (Summer & Off-Hours)</li>
         </ul>
-        <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Get a Free Consultation</a>
+        <a href="contact.html" class="btn btn-primary trust-signals-button">Get a Free Consultation</a>
       </div>
     </section>
 
-    <!-- FAQ Section (visible, not just schema) -->
-    <section class="section" style="background:var(--color-gray-light);padding:4rem 0 3rem 0;">
-      <div class="container" style="max-width:900px;">
-        <h2 style="text-align:center;margin-bottom:2rem;">Frequently Asked Questions</h2>
-        <div class="faq-list" style="display:grid;gap:2rem;">
+    <!-- FAQ Section -->
+    <section class="section faq-section">
+      <div class="container faq-container">
+        <h2 class="faq-title">Frequently Asked Questions</h2>
+        <div class="faq-list">
           <div>
             <h3>What areas do you serve?</h3>
             <p>We serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
@@ -259,53 +260,55 @@
       </div>
     </section>
 
-    <!-- Call to Action Section (bottom) -->
-    <section class="section cta-section anim-fade-in-up" style="background:var(--color-black);padding:4rem 0 3rem 0;">
-      <div class="container" style="max-width:700px;text-align:center;">
-        <h2 style="margin-bottom:1.2rem;color:#fff;">Elevate Your Next Project</h2>
-        <p style="margin-bottom:2.2rem;color:#fff;">Discover how Elite Install can deliver a flawless installation for your school or business. Our team is ready to help you succeed.</p>
-        <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Request a Free Quote</a>
+    <!-- Call to Action Section -->
+    <section class="section cta-section-bottom anim-fade-in-up">
+      <div class="container cta-container">
+        <h2 class="cta-title">Elevate Your Next Project</h2>
+        <p class="cta-text">Discover how Elite Install can deliver a flawless installation for your school or business. Our team is ready to help you succeed.</p>
+        <a href="contact.html" class="btn btn-primary cta-button">Request a Free Quote</a>
       </div>
     </section>
 
-        <section class="section section-accented principles-section">
-            <div class="container" style="max-width:1200px;">
-                <div class="section-header anim-fade-in-up" style="margin-bottom:3.5rem; text-align: center;">
-                    <h2 style="margin-bottom:1.2rem;">Our Commitment to You</h2>
-                    <p style="margin-bottom:0;">These principles define our work. They are the standards we bring to every project, ensuring a professional experience from our first conversation to the final walkthrough.</p>
-                </div>
-                <div class="features-grid" style="gap:2.5rem;">
-                    <article class="feature-card anim-fade-in-up" style="padding:2.5rem 2rem;">
-                        <div class="feature-icon" style="margin-bottom:1.2rem;"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div>
-                        <h3 style="margin-bottom:0.7rem;">Unwavering Reliability</h3>
-                        <p style="margin-bottom:0;">Your schedule is our guide. We use thorough planning and logistical foresight to ensure your timeline is met and your peace of mind is protected.</p>
-                    </article>
-                    <article class="feature-card anim-fade-in-up" data-delay="100" style="padding:2.5rem 2rem;">
-                        <div class="feature-icon" style="margin-bottom:1.2rem;"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div>
-                        <h3 style="margin-bottom:0.7rem;">Radical Professionalism</h3>
-                        <p style="margin-bottom:0;">Our uniformed crew are ambassadors for your brand. We operate with courtesy and respect, maintaining a clean, orderly site that reflects the quality you promise.</p>
-                    </article>
-                    <article class="feature-card anim-fade-in-up" data-delay="200" style="padding:2.5rem 2rem;">
-                        <div class="feature-icon" style="margin-bottom:1.2rem;"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div>
-                        <h3 style="margin-bottom:0.7rem;">Dedicated Expertise</h3>
-                        <p style="margin-bottom:0;">We get it right the first time. Our full-time, dedicated team has the training and tools to execute installations efficiently, minimizing punch lists and return trips.</p>
-                    </article>
-                    <article class="feature-card anim-fade-in-up" data-delay="300" style="padding:2.5rem 2rem;">
-                        <div class="feature-icon" style="margin-bottom:1.2rem;"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div>
-                        <h3 style="margin-bottom:0.7rem;">Proactive Communication</h3>
-                        <p style="margin-bottom:0;">You will always be informed. We provide a single point of contact and a clear communication rhythm, so you never have to guess the status of your project.</p>
-                    </article>
-                </div>
+    <!-- Principles Section -->
+    <section class="section section-accented principles-section">
+        <div class="container principles-container">
+            <div class="section-header anim-fade-in-up">
+                <h2>Our Commitment to You</h2>
+                <p>These principles define our work. They are the standards we bring to every project, ensuring a professional experience from our first conversation to the final walkthrough.</p>
             </div>
-        </section>
+            <div class="features-grid principles-grid">
+                <article class="feature-card anim-fade-in-up principle-card">
+                    <div class="feature-icon principle-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div>
+                    <h3>Unwavering Reliability</h3>
+                    <p>Your schedule is our guide. We use thorough planning and logistical foresight to ensure your timeline is met and your peace of mind is protected.</p>
+                </article>
+                <article class="feature-card anim-fade-in-up" data-delay="100" class="principle-card">
+                    <div class="feature-icon principle-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div>
+                    <h3>Radical Professionalism</h3>
+                    <p>Our uniformed crew are ambassadors for your brand. We operate with courtesy and respect, maintaining a clean, orderly site that reflects the quality you promise.</p>
+                </article>
+                <article class="feature-card anim-fade-in-up" data-delay="200" class="principle-card">
+                    <div class="feature-icon principle-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div>
+                    <h3>Dedicated Expertise</h3>
+                    <p>We get it right the first time. Our full-time, dedicated team has the training and tools to execute installations efficiently, minimizing punch lists and return trips.</p>
+                </article>
+                <article class="feature-card anim-fade-in-up" data-delay="300" class="principle-card">
+                    <div class="feature-icon principle-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div>
+                    <h3>Proactive Communication</h3>
+                    <p>You will always be informed. We provide a single point of contact and a clear communication rhythm, so you never have to guess the status of your project.</p>
+                </article>
+            </div>
+        </div>
+    </section>
 
-        <section class="cta-section anim-fade-in-up">
-            <div class="container" style="max-width:700px;">
-                <h2 style="margin-bottom:1.2rem;">Build a Partnership That Lasts.</h2>
-                <p style="margin-bottom:2.2rem;">Ready to work with an installation partner that values your reputation as much as you do? Contact us today to discuss your next project.</p>
-                <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Begin the Conversation</a>
-            </div>
-        </section>
+    <!-- Final CTA Section -->
+    <section class="cta-section anim-fade-in-up">
+        <div class="container cta-container">
+            <h2>Build a Partnership That Lasts.</h2>
+            <p>Ready to work with an installation partner that values your reputation as much as you do? Contact us today to discuss your next project.</p>
+            <a href="contact.html" class="btn btn-primary cta-button">Begin the Conversation</a>
+        </div>
+    </section>
     </main>
 
     <footer class="main-footer" role="contentinfo">
