--- a/index.html
+++ b/index.html
@@ -235,42 +235,20 @@
       </div>
     </section>
 
-    <!-- FAQ Section -->
-    <section class="section faq-section">
-      <div class="container faq-container">
-        <h2 class="faq-title">Frequently Asked Questions</h2>
-        <div class="faq-list">
-          <div>
-            <h3>What areas do you serve?</h3>
-            <p>We serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
-          </div>
-          <div>
-            <h3>Are you insured and certified?</h3>
-            <p>Yes, our team is fully insured and certified for professional installations.</p>
-          </div>
-          <div>
-            <h3>Do you offer project management?</h3>
-            <p>Absolutely. We handle delivery, scheduling, installation, and punch lists for a seamless experience.</p>
-          </div>
-          <div>
-            <h3>How do I get a quote?</h3>
-            <p>Click any “Request a Quote” button or visit our Contact page to get started.</p>
-          </div>
+    <!-- Testimonial Section -->
+    <section class="section testimonial-section">
+        <div class="container">
+            <div class="testimonial-content">
+                <blockquote class="testimonial-quote">
+                    “Elite Install is the only partner we trust. Their professionalism and commitment to getting the job done right are second to none. They make us look good every single time.”
+                </blockquote>
+                <p class="testimonial-author"><span>John Davis</span> – Operations Manager, Texas School Furnishings</p>
+            </div>
         </div>
-      </div>
-    </section>
-
-    <!-- Call to Action Section -->
-    <section class="section cta-section-bottom anim-fade-in-up">
-      <div class="container cta-container">
-        <h2 class="cta-title">Elevate Your Next Project</h2>
-        <p class="cta-text">Discover how Elite Install can deliver a flawless installation for your school or business. Our team is ready to help you succeed.</p>
-        <a href="contact.html" class="btn btn-primary cta-button">Request a Free Quote</a>
-      </div>
     </section>
 
     <!-- Principles Section -->
-    <section class="section section-accented principles-section">
+    <section class="section section-full-width section-accented principles-section">
         <div class="container principles-container">
             <div class="section-header anim-fade-in-up">
                 <h2>Our Commitment to You</h2>
@@ -301,11 +279,36 @@
         </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="section faq-section">
+      <div class="container faq-container">
+        <h2 class="faq-title">Frequently Asked Questions</h2>
+        <div class="faq-list">
+          <div>
+            <h3>What areas do you serve?</h3>
+            <p>We serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
+          </div>
+          <div>
+            <h3>Are you insured and certified?</h3>
+            <p>Yes, our team is fully insured and certified for professional installations.</p>
+          </div>
+          <div>
+            <h3>Do you offer project management?</h3>
+            <p>Absolutely. We handle delivery, scheduling, installation, and punch lists for a seamless experience.</p>
+          </div>
+          <div>
+            <h3>How do I get a quote?</h3>
+            <p>Click any “Request a Quote” button or visit our Contact page to get started.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Final CTA Section -->
-    <section class="cta-section anim-fade-in-up">
+    <section class="section cta-section-bottom anim-fade-in-up">
         <div class="container cta-container">
-            <h2>Build a Partnership That Lasts.</h2>
-            <p>Ready to work with an installation partner that values your reputation as much as you do? Contact us today to discuss your next project.</p>
+            <h2 class="cta-title">Build a Partnership That Lasts.</h2>
+            <p class="cta-text">Ready to work with an installation partner that values your reputation as much as you do? Contact us today to discuss your next project.</p>
             <a href="contact.html" class="btn btn-primary cta-button">Begin the Conversation</a>
         </div>
     </section>
