Add skip link styles for improved accessibility and navigation

--- a/index.html
+++ b/index.html
@@ -181,42 +181,39 @@
 
     <!-- Service Highlights Section -->
     <section class="section services-section">
-      <div class="container">
-        <div class="section-header anim-fade-in-up">
-            <h2 class="section-title">Our Expertise</h2>
-            <p class="section-subtitle">Professionalism, and peace of mind.<br>&nbsp;</p>
-        </div>
-        <div class="services-grid">
-          <div class="service-card anim-fade-in-up" data-delay="100">
-            <div class="service-card-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
-            </div>
-            <h3 class="service-card-title">Educational Furniture</h3>
-            <p>Expert installation of K-12 and higher education furniture, ensuring a seamless setup from start to finish.</p>
-          </div>
-          <div class="service-card anim-fade-in-up" data-delay="200">
-            <div class="service-card-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
-            </div>
-            <h3 class="service-card-title">Commercial & FF&E</h3>
-            <p>Comprehensive solutions for Furniture, Fixtures & Equipment in any commercial or educational space.</p>
-          </div>
-          <div class="service-card anim-fade-in-up" data-delay="300">
-            <div class="service-card-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-            </div>
-            <h3 class="service-card-title">Project Management</h3>
-            <p>We handle all logistics, from delivery coordination to final walkthrough, for a seamless project.</p>
-          </div>
-          <div class="service-card anim-fade-in-up" data-delay="400">
-            <div class="service-card-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-            </div>
-            <h3 class="service-card-title">Statewide Coverage</h3>
-            <p>Our professional teams serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
-          </div>
-        </div>
+    <!-- =============== EXPERTISE SECTION =============== -->
+    <section class="expertise-section">
+    <div class="expertise-header">
+      <h2>Our Expertise</h2>
+      <p>Professionalism, and peace of mind.</p>
+    </div>
+    <div class="expertise-grid">
+      <!-- Item 1 -->
+      <div class="expertise-card">
+        <i class="icon-educational-furniture"></i>
+        <h3>Educational Furniture</h3>
+        <p>Expert installation of K-12 and higher education furniture, ensuring a seamless setup from start to finish.</p>
       </div>
+      <!-- Item 2 -->
+      <div class="expertise-card">
+        <i class="icon-commercial-ff-e"></i>
+        <h3>Commercial & FF&E</h3>
+        <p>Comprehensive solutions for Furniture, Fixtures & Equipment in any commercial or educational space.</p>
+      </div>
+      <!-- Item 3 -->
+      <div class="expertise-card">
+        <i class="icon-project-management"></i>
+        <h3>Project Management</h3>
+        <p>We handle all logistics, from delivery coordination to final walkthrough, for a seamless project.</p>
+      </div>
+      <!-- Item 4 -->
+      <div class="expertise-card">
+        <i class="icon-statewide-coverage"></i>
+        <h3>Statewide Coverage</h3>
+        <p>Our professional teams serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
+      </div>
+    </div>
+    </section>
     </section>
 
     <!-- Trust Signals Section -->
