Enhance About and Index pages with improved spacing, centered text, and new FAQ accordion functionality; update styles for better visual consistency and user experience.

--- a/about.html
+++ b/about.html
@@ -41,14 +41,14 @@
         </section>
 
         <section class="section">
-            <div class="container story-container">
+            <div class="container story-container improved-story-spacing">
                 <div class="section-header anim-fade-in-up">
                     <h2>From Project Manager to Partner</h2>
                 </div>
                 <div class="story-content anim-fade-in-up">
-                    <p>Before founding Elite Install, our leader was a senior project manager for educational and commercial furniture dealerships. He lived the daily struggle of unreliable subs, missed deadlines, and brand damage from unprofessional crews.</p>
-                    <p class="highlight-text">He knew there had to be a better way—a partnership built on transparency, accountability, and a deep respect for the dealer's reputation.</p>
-                    <p>So, he built it. Elite Install is the partner he always wished he had.</p>
+                    <p class="centered-story-intro">Elite Install is a new company, but we know what matters most to furniture dealers and their clients. We've worked on job sites, seen what can go wrong, and understand the importance of getting the details right.</p>
+                    <p class="highlight-text">We're not experts yet, but we are committed to providing better customer service, always being on time, and keeping communication clear and honest—every step of the way.</p>
+                    <p>Our goal is simple: make your job easier and your clients happier by being the most reliable, responsive installation team you can call.</p>
                 </div>
             </div>
         </section>
