--- a/index.html
+++ b/index.html
@@ -183,7 +183,15 @@
     <section class="section services-section">
     <!-- =============== EXPERTISE SECTION =============== -->
     <section class="expertise-section">
-    <div class="expertise-header">
+    <!-- SVG Divider: Hero to Expertise -->
+    <div class="section-divider">
+      <svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display:block;width:100%;height:40px;"><path d="M0,80 C480,0 960,160 1440,80 L1440,0 L0,0 Z" fill="#232a33"/></svg>
+    </div>
+  <div class="expertise-header">
+    <!-- SVG Divider: Expertise to Trust Signals -->
+    <div class="section-divider">
+      <svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display:block;width:100%;height:40px;"><path d="M0,0 C480,80 960,-80 1440,0 L1440,80 L0,80 Z" fill="#262b33"/></svg>
+    </div>
   <h2>Our Expertise</h2>
   <div class="expertise-subtitle-centered">Professionalism, and peace of mind.</div>
     </div>
@@ -218,7 +226,11 @@
 
     <!-- Trust Signals Section -->
     <section class="section trust-signals-section">
-      <div class="container trust-signals-container">
+  <div class="container trust-signals-container">
+    <!-- SVG Divider: Trust Signals to Principles -->
+    <div class="section-divider">
+      <svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display:block;width:100%;height:40px;"><path d="M0,80 C480,0 960,160 1440,80 L1440,0 L0,0 Z" fill="#232323"/></svg>
+    </div>
   <h2 class="trust-signals-title">Why Choose Elite Install?</h2>
         <ul class="trust-signals-list">
           <li class="trust-signals-list-item">✔ Fully Insured & Certified Professionals</li>
@@ -236,7 +248,11 @@
 
     <!-- Principles Section -->
     <section class="section section-full-width section-accented principles-section">
-        <div class="container principles-container">
+  <div class="container principles-container">
+    <!-- SVG Divider: Principles to FAQ -->
+    <div class="section-divider">
+      <svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display:block;width:100%;height:40px;"><path d="M0,0 C480,80 960,-80 1440,0 L1440,80 L0,80 Z" fill="#101113"/></svg>
+    </div>
             <div class="section-header anim-fade-in-up">
                 <h2>Our Commitment to You</h2>
                 <div class="principles-subtitle-centered">
@@ -270,7 +286,7 @@
 
     <!-- FAQ Section -->
     <section class="section faq-section">
-      <div class="container faq-container">
+  <div class="container faq-container">
         <h2 class="faq-title">Frequently Asked Questions</h2>
         <div class="faq-list">
           <div class="faq-accordion-container">
