Refactor About and Index pages for improved text alignment and styling; enhance expertise section layout and responsiveness.

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 <div class="story-content anim-fade-in-up">
                     <p class="centered-story-intro">Elite Install is a new company, but we know what matters most to furniture dealers and their clients. We've worked on job sites, seen what can go wrong, and understand the importance of getting the details right.</p>
                     <p class="highlight-text">We're not experts yet, but we are committed to providing better customer service, always being on time, and keeping communication clear and honest—every step of the way.</p>
-                    <p>Our goal is simple: make your job easier and your clients happier by being the most reliable, responsive installation team you can call.</p>
+                    <p class="centered-story-intro">Our goal is simple: make your job easier and your clients happier by being the most reliable, responsive installation team you can call.</p>
                 </div>
             </div>
         </section>
