--- a/index.html
+++ b/index.html
@@ -183,44 +183,38 @@
     <section class="section services-section">
     <!-- =============== EXPERTISE SECTION =============== -->
     <section class="expertise-section">
-    <!-- SVG Divider: Hero to Expertise -->
-    <div class="section-divider">
-      <svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display:block;width:100%;height:40px;"><path d="M0,80 C480,0 960,160 1440,80 L1440,0 L0,0 Z" fill="#232a33"/></svg>
-    </div>
-  <div class="expertise-header">
-    <!-- SVG Divider: Expertise to Trust Signals -->
-    <div class="section-divider">
-      <svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display:block;width:100%;height:40px;"><path d="M0,0 C480,80 960,-80 1440,0 L1440,80 L0,80 Z" fill="#262b33"/></svg>
-    </div>
-  <h2>Our Expertise</h2>
-  <div class="expertise-subtitle-centered">Professionalism, and peace of mind.</div>
-    </div>
-    <div class="expertise-grid">
-      <!-- Item 1 -->
-      <div class="expertise-card">
-        <i class="icon-educational-furniture"></i>
-        <h3>Educational Furniture</h3>
-        <p>Expert installation of K-12 and higher education furniture, ensuring a seamless setup from start to finish.</p>
+      <div class="container">
+        <div class="expertise-header">
+          <h2>Our Expertise</h2>
+          <p class="expertise-subtitle-centered">Professionalism, and peace of mind.</p>
+        </div>
+        <div class="expertise-grid">
+          <!-- Item 1 -->
+          <div class="expertise-card">
+            <i class="icon-educational-furniture"></i>
+            <h3>Educational Furniture</h3>
+            <p>Expert installation of K-12 and higher education furniture, ensuring a seamless setup from start to finish.</p>
+          </div>
+          <!-- Item 2 -->
+          <div class="expertise-card">
+            <i class="icon-commercial-ff-e"></i>
+            <h3>Commercial & FF&E</h3>
+            <p>Comprehensive solutions for Furniture, Fixtures & Equipment in any commercial or educational space.</p>
+          </div>
+          <!-- Item 3 -->
+          <div class="expertise-card">
+            <i class="icon-project-management"></i>
+            <h3>Project Management</h3>
+            <p>We handle all logistics, from delivery coordination to final walkthrough, for a seamless project.</p>
+          </div>
+          <!-- Item 4 -->
+          <div class="expertise-card">
+            <i class="icon-statewide-coverage"></i>
+            <h3>Statewide Coverage</h3>
+            <p>Our professional teams serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
+          </div>
+        </div>
       </div>
-      <!-- Item 2 -->
-      <div class="expertise-card">
-        <i class="icon-commercial-ff-e"></i>
-        <h3>Commercial & FF&E</h3>
-        <p>Comprehensive solutions for Furniture, Fixtures & Equipment in any commercial or educational space.</p>
-      </div>
-      <!-- Item 3 -->
-      <div class="expertise-card">
-        <i class="icon-project-management"></i>
-        <h3>Project Management</h3>
-        <p>We handle all logistics, from delivery coordination to final walkthrough, for a seamless project.</p>
-      </div>
-      <!-- Item 4 -->
-      <div class="expertise-card">
-        <i class="icon-statewide-coverage"></i>
-        <h3>Statewide Coverage</h3>
-        <p>Our professional teams serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
-      </div>
-    </div>
     </section>
     </section>
 
@@ -228,9 +222,6 @@
     <section class="section trust-signals-section">
   <div class="container trust-signals-container">
     <!-- SVG Divider: Trust Signals to Principles -->
-    <div class="section-divider">
-      <svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display:block;width:100%;height:40px;"><path d="M0,80 C480,0 960,160 1440,80 L1440,0 L0,0 Z" fill="#232323"/></svg>
-    </div>
   <h2 class="trust-signals-title">Why Choose Elite Install?</h2>
         <ul class="trust-signals-list">
           <li class="trust-signals-list-item">✔ Fully Insured & Certified Professionals</li>
@@ -250,9 +241,6 @@
     <section class="section section-full-width section-accented principles-section">
   <div class="container principles-container">
     <!-- SVG Divider: Principles to FAQ -->
-    <div class="section-divider">
-      <svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display:block;width:100%;height:40px;"><path d="M0,0 C480,80 960,-80 1440,0 L1440,80 L0,80 Z" fill="#101113"/></svg>
-    </div>
             <div class="section-header anim-fade-in-up">
                 <h2>Our Commitment to You</h2>
                 <div class="principles-subtitle-centered">
